# it-job-aggregator

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  demo_scraper.py  docker-compose.yml  plan.md  pyproject.toml
.github/workflows/: ci.yml
src/it_job_aggregator/: __init__.py  bot.py  config.py  db.py  filters.py  formatter.py  main.py  models.py  utils.py
src/it_job_aggregator/scrapers/: __init__.py  base.py  forasps_scraper.py  jobsps_scraper.py  telegram_scraper.py
tests/: conftest.py  test_base_scraper.py  test_bot.py  test_config.py  test_db.py  test_filters.py  test_forasps_scraper.py  test_formatter.py  test_main.py  test_models.py  test_scrapers.py  test_utils.py
